# Example-Adios-With-Swift

./: CMakeLists.txt  Makefile  README-icee.txt  README-swift.txt  README.md  README.txt  adios_icee.cpp  adios_icee.h  adios_icee.i  adios_icee.tcl  adios_read.c  adios_read.cpp  adios_write.c  adios_write.cpp  build.sh  check_conf_exists.sh  common.c  dataspaces.conf  ds.h  ds.i  ds.tcl  filelock.c  filelock.h  icee-timing.py  icee_cmdline.c  icee_cmdline.ggo  icee_cmdline.h  make-package-ds.tcl  make-package.tcl  pkgIndex.tcl  plot-timing.py  run-dataspaces.py  run-with-dataspaces-all.sh  run-with-dataspaces.sh  run-with-files.sh  test-adios-icee.sh  test-adios-icee.swift  test-adios-staging.swift  test-staging-all.swift
Modules/: FindADIOS.cmake
